# shere-cli

./: .gitmodules  CMakeLists.txt
src/: ShereCli.cpp  ShereCli.h  main.cpp
test/: CMakeLists.txt  test.cpp
